--- a/main.html
+++ b/main.html
@@ -11,6 +11,34 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<img src="#" alt="img.png">
+<h1>Well com Accio</h1> <br>
+
+	<h5>Cources.. </h5>
+	<ul>
+		<li>C++</li>
+		<li>Java</li>
+		<li>Python</li>
+		<li>Cpp</li>
+	</ul>
+
+	<h5>Activities</h5>
+	<li>
+	   <li>Dought Sesions</li>
+	   <li>Live Licture</li>
+	    <li>Weekly Contests</li>
+	    <li>Real Mock Interviews</li>
+	
+	</li>
+
+	 <nav style= "display : flex; padding : 3px ; align-items : right; margin :2px">
+		 <p>Home </p>
+		 <p>Product </p>
+		 <p>About</p>
+		 <p>Contact</p>
+		
+	 </nav>
+
 </body>
 
 </html>
