--- a/main.html
+++ b/main.html
@@ -31,12 +31,13 @@
 	
 	</li>
 
-	 <nav style= "display : flex; padding : 3px ; align-items : right; margin :2px">
-		 <p>Home </p>
-		 <p>Product </p>
-		 <p>About</p>
-		 <p>Contact</p>
-		
+	 <nav class="nav-bar">
+		 <ul class="nav-ul">
+		 <li>Home </li>
+		 <li>Product </li>
+		 <li>About</li>
+		 <li>Contact</li>
+		 </ul>
 	 </nav>
 
 </body>
