--- a/main.html
+++ b/main.html
@@ -8,37 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <header role="heading">
+        <h1>My Accessible Portfolio</h1>
+    </header>
+
+    <nav role="navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#">Home</a></li>
+            <li role="listitem"><a href="#">About</a></li>
+            <li role="listitem"><a href="#">Projects</a></li>
+            <li role="listitem"><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section role="region">
+        <img src="your-image-url.jpg" alt="Your Name's Photo" role="img">
+        <h2>Description</h2>
+        <p>This is a brief description of myself and my skills.</p>
+    </section>
+
+    <section role="region">
+        <h2>Skills</h2>
+        <ul role="list">
+            <li role="listitem">HTML</li>
+            <li role="listitem">CSS</li>
+            <li role="listitem">JavaScript</li>
+        </ul>
+    </section>
+
+    <footer role="contentinfo">
+        <p>&copy; 2023 My Accessible Portfolio</p>
+    </footer>
     <script type="text/javascript" src="./script.js">
 </script>
-
-	<img src="#" alt="img.png">
-<h1>Well com Accio</h1> <br>
-
-	<h5>Cources.. </h5>
-	<ul>
-		<li>C++</li>
-		<li>Java</li>
-		<li>Python</li>
-		<li>Cpp</li>
-	</ul>
-
-	<h5>Activities</h5>
-	<li>
-	   <li>Dought Sesions</li>
-	   <li>Live Licture</li>
-	    <li>Weekly Contests</li>
-	    <li>Real Mock Interviews</li>
-	
-	</li>
-
-	 <nav class="nav-bar">
-		 <ul class="nav-ul">
-		 <li>Home </li>
-		 <li>Product </li>
-		 <li>About</li>
-		 <li>Contact</li>
-		 </ul>
-	 </nav>
 
 </body>
 
