--- a/main.html
+++ b/main.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accessible Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	 <header role="heading">
+    <!-- Header with a Heading -->
+    <header>
+        <h1 role="heading">My Portfolio</h1>
     </header>
-        <h1>My Accessible Portfolio</h1>
-	
 
+    <!-- Navigation Bar with ARIA Navigation Role -->
     <nav role="navigation">
         <ul role="list">
-            <li role="listitem"><a href="#">Home</a></li>
-            <li role="listitem"><a href="#">About</a></li>
-            <li role="listitem"><a href="#">Projects</a></li>
-            <li role="listitem"><a href="#">Contact</a></li>
+            <li role="listitem"><a href="#about">About Me</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
-    <section role="region">
-        <img src="your-image-url.jpg" alt="Your Name's Photo" role="img">
-        <h2>Description</h2>
-        <p>This is a brief description of myself and my skills.</p>
+    <!-- Main Content Section -->
+    <main>
+        <!-- Image with an Alt Attribute -->
+        <img src="portfolio-image.jpg" alt="A sample image representing my portfolio work">
+        
+        <!-- Brief Description -->
+        <section>
+            <h2>About Me</h2>
+            <p>Hi, I'm John, a web developer passionate about creating accessible and user-friendly websites.</p>
+        </section>
+
+        <!-- List of Projects with ARIA List Role -->
+        <section>
+            <h2>My Projects</h2>
+            <ul role="list">
+                <li role="listitem">Project 1: Responsive Website</li>
+                <li role="listitem">Project 2: Accessibility Audit</li>
+                <li role="listitem">Project 3: Web App Development</li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- Contact Information Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>If you'd like to get in touch, please email me at <a href="mailto:contact@example.com">contact@example.com</a>.</p>
     </section>
-
-    <section role="region">
-        <h2>Skills</h2>
-        <ul role="list">
-            <li role="listitem">HTML</li>
-            <li role="listitem">CSS</li>
-            <li role="listitem">JavaScript</li>
-        </ul>
-    </section>
-
-    <footer role="contentinfo">
-        <p>&copy; 2023 My Accessible Portfolio</p>
-    </footer>
-    <script type="text/javascript" src="./script.js">
-</script>
-
 </body>
-
 </html>
